# simplecpu

./: .gitignore
Binaries/: fact.s  fact_test.s  fibo_test.s  fibonacci.s  makelinks.sh  mult.s  mult_test.s  printArr.s  printArr_test.s
Prop/: Executable.Common.props
Source/: CMakeLists.txt  Emulation.sln
Source/Asm/: Asm.vcxproj  Asm.vcxproj.filters  AsmFile.cpp  AsmFile.h  AsmLine.cpp  AsmLine.h  BinaryFile.cpp  BinaryFile.h  Main.cpp
Source/Common/: BufferPtr.cpp  BufferPtr.h  Common.vcxproj  Common.vcxproj.filters  Exception.h  Opcodes.cpp  Opcodes.h  Pimpl.h  PimplImpl.h  Registers.cpp  Registers.h  Types.h
Source/Emu/: Cpu.cpp  Cpu.h  Emu.vcxproj  Emu.vcxproj.filters  Main.cpp
