    cmake_minimum_required(VERSION 2.8)
    project(simplecpu)
    include_directories("${CMAKE_SOURCE_DIR}")
    add_definitions(-O0 -g3 -Wall -Wno-switch -Wno-unused-variable -std=c++0x)
    add_library(Common Common/BufferPtr.cpp Common/BufferPtr.h Common/Exception.h Common/Opcodes.cpp Common/Opcodes.h Common/Pimpl.h Common/PimplImpl.h Common/Registers.cpp Common/Registers.h Common/Types.h)
    add_executable(Asm Asm/AsmFile.cpp Asm/AsmFile.h Asm/AsmLine.cpp Asm/AsmLine.h Asm/BinaryFile.cpp Asm/BinaryFile.h Asm/Main.cpp)
    target_link_libraries(Asm Common)
    target_link_libraries(Asm boost_program_options)
    add_executable(Emu Emu/Cpu.cpp Emu/Cpu.h Emu/Main.cpp)
    target_link_libraries(Emu Common)
